{
  "version": 4,
  "terraform_version": "1.0.8",
  "serial": 21,
  "lineage": "a8e441a6-8e3f-5e57-7cd2-83ffa690faf9",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0fe9acb2b9c4c7169",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-208-211-176.compute-1.amazonaws.com",
            "public_ip": "3.208.211.176",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "vorx-vpc-dev-us-east-1a"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vorx-vpc-dev-us-east-1a"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0706104adfed8703b",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-221-56-162.compute-1.amazonaws.com",
            "public_ip": "3.221.56.162",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "vorx-vpc-dev-us-east-1b"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vorx-vpc-dev-us-east-1b"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637226899842:internet-gateway/igw-052af0c6de7997d9a",
            "id": "igw-052af0c6de7997d9a",
            "owner_id": "637226899842",
            "tags": {
              "Environment": "dev",
              "Name": "vorx-vpc-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vorx-vpc-dev"
            },
            "vpc_id": "vpc-0b2f4a1302b125059"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fe9acb2b9c4c7169",
            "connectivity_type": "public",
            "id": "nat-00ee0662ed714d669",
            "network_interface_id": "eni-017860941ad81adf8",
            "private_ip": "10.0.101.158",
            "public_ip": "3.208.211.176",
            "subnet_id": "subnet-0269f7200a2e874ee",
            "tags": {
              "Environment": "dev",
              "Name": "vorx-vpc-dev-us-east-1a"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vorx-vpc-dev-us-east-1a"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0706104adfed8703b",
            "connectivity_type": "public",
            "id": "nat-0bcca37b1ec9a606f",
            "network_interface_id": "eni-0366555e5f41a433a",
            "private_ip": "10.0.102.205",
            "public_ip": "3.221.56.162",
            "subnet_id": "subnet-0693b2429d477ed47",
            "tags": {
              "Environment": "dev",
              "Name": "vorx-vpc-dev-us-east-1b"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vorx-vpc-dev-us-east-1b"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0cea6f04529533d691080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-00ee0662ed714d669",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0cea6f04529533d69",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-050e7534e12aa426f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0bcca37b1ec9a606f",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-050e7534e12aa426f",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-052af0c6de7997d9a",
            "id": "r-rtb-0cc59a104b6a6a1091080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0cc59a104b6a6a109",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637226899842:route-table/rtb-0cea6f04529533d69",
            "id": "rtb-0cea6f04529533d69",
            "owner_id": "637226899842",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "vorx-vpc-dev-private-us-east-1a"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vorx-vpc-dev-private-us-east-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b2f4a1302b125059"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637226899842:route-table/rtb-050e7534e12aa426f",
            "id": "rtb-050e7534e12aa426f",
            "owner_id": "637226899842",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "vorx-vpc-dev-private-us-east-1b"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vorx-vpc-dev-private-us-east-1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b2f4a1302b125059"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637226899842:route-table/rtb-0cc59a104b6a6a109",
            "id": "rtb-0cc59a104b6a6a109",
            "owner_id": "637226899842",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "vorx-vpc-dev-public"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vorx-vpc-dev-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b2f4a1302b125059"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b5f9d7a25635d969",
            "route_table_id": "rtb-0cea6f04529533d69",
            "subnet_id": "subnet-0651e9eeed5de8e01"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a6ad33a1d206236a",
            "route_table_id": "rtb-050e7534e12aa426f",
            "subnet_id": "subnet-0d12320df93785514"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08739d97c8de0c641",
            "route_table_id": "rtb-0cc59a104b6a6a109",
            "subnet_id": "subnet-0269f7200a2e874ee"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ce3aea4649b2dcc6",
            "route_table_id": "rtb-0cc59a104b6a6a109",
            "subnet_id": "subnet-0693b2429d477ed47"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637226899842:subnet/subnet-0651e9eeed5de8e01",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0651e9eeed5de8e01",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637226899842",
            "tags": {
              "Environment": "dev",
              "Name": "vorx-vpc-dev-private-us-east-1a"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vorx-vpc-dev-private-us-east-1a"
            },
            "vpc_id": "vpc-0b2f4a1302b125059"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637226899842:subnet/subnet-0d12320df93785514",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0d12320df93785514",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "637226899842",
            "tags": {
              "Environment": "dev",
              "Name": "vorx-vpc-dev-private-us-east-1b"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vorx-vpc-dev-private-us-east-1b"
            },
            "vpc_id": "vpc-0b2f4a1302b125059"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637226899842:subnet/subnet-0269f7200a2e874ee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.101.0/24",
            "id": "subnet-0269f7200a2e874ee",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "637226899842",
            "tags": {
              "Environment": "dev",
              "Name": "vorx-vpc-dev-public-us-east-1a"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vorx-vpc-dev-public-us-east-1a"
            },
            "vpc_id": "vpc-0b2f4a1302b125059"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637226899842:subnet/subnet-0693b2429d477ed47",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.102.0/24",
            "id": "subnet-0693b2429d477ed47",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "637226899842",
            "tags": {
              "Environment": "dev",
              "Name": "vorx-vpc-dev-public-us-east-1b"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vorx-vpc-dev-public-us-east-1b"
            },
            "vpc_id": "vpc-0b2f4a1302b125059"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637226899842:vpc/vpc-0b2f4a1302b125059",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00f500e6940abf965",
            "default_route_table_id": "rtb-0e7e356909f4c7dc9",
            "default_security_group_id": "sg-0814ceeafbeae8752",
            "dhcp_options_id": "dopt-0be494df44e1dc706",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0b2f4a1302b125059",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0e7e356909f4c7dc9",
            "owner_id": "637226899842",
            "tags": {
              "Environment": "dev",
              "Name": "vorx-vpc-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vorx-vpc-dev"
            }
          }
        }
      ]
    }
  ]
}